@@ -5,6 +5,7 @@
 	* HTML dump: output IBMgraphics and DECgraphics characters
 
 	* patches:
+	  - MSGTYPE option (by Pasi Kallinen)
 	  - Sortloot (by Jukka Lahtinen)
 
 	* user interface improvements:
